# brAIns

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-03-30-brains-mvp-test-plan.md  2026-03-30-brains-mvp.md
src/brains/: config.py  main.py  models.py  query_engine.py
src/brains/data/: companies.json  graph.json  knowledge.json
src/brains/llm/: __init__.py  fake_provider.py  ollama_provider.py  openai_provider.py  provider.py
src/brains/sources/: __init__.py  base.py  graph_source.py  sql_source.py  vector_source.py
tests/: conftest.py  test_api.py  test_config.py  test_consistency.py  test_llm.py  test_query_engine.py  test_smoke.py  test_sources.py
